[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpsee = { version = "0.20.3", features = [
    "server",
    "macros",
    "http-client",
] }
anyhow = "1"
futures = "0.3"
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde_json = { version = "1" }
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
primitive-types = { version = "0.12.2" }
dotenv = "0.15.0"
rand = "0.8.5"
starknet-crypto = "0.6.1"
starknet = "0.8.0"
url = "2.5.0"

